# multi_agent

./: DataGenerator.py  EvaluateDataset.py  README.md  mock_agent.py  pyproject.toml  test.py
.devcontainer/: devcontainer.json
agent_system/: Agent.py  MCP.py  a2a_executor.py  a2a_server_addition.py  a2a_server_division.py  a2a_server_host.py  a2a_server_multiplication.py  a2a_server_subtraction.py  logging_task_store.py
agent_system/arithmetic_a2a/: __init__.py  clients.py  host_executor.py  remote_executors.py
data/: as_easy.json  asm_easy.json  asmd_easy.json
experiment/: __init__.py  __main__.py  config.py  host_client.py  manager.py  servers.py
logs/host/: 0117b9b8-858c-4602-b5f1-33fd06c2308b.json  022a621a-284f-47d2-8547-3e48954df749.json  028509ee-2137-4205-bbac-b6881eff4c87.json  02a6262d-8d26-4ee9-b070-a96328944a8e.json  035fbeb6-d49b-4429-854e-221eaa3a60cd.json  03628ffb-abf6-497e-9438-e30db9ad17e5.json  041671f5-9003-4fc5-a9a7-db2e649bea1a.json  04e95ad4-5a9e-4450-bbbe-0a21bb8f99c8.json  053a7772-4b06-48b1-b1c1-80510d96acf7.json  05d99653-25f6-44e7-9d87-6d10946e0e11.json  05f6cd36-8c73-4c03-b6f5-5050f910860a.json  06a9d492-e0d2-465a-a6f0-1e91eab19056.json  06dbcc70-4774-429e-a1cc-b1fbda9278fa.json  06e73bde-91b1-4723-b355-72917de0ca78.json  09f20be6-a674-467f-b65f-6bd34409d04a.json  0a6475d6-461f-47a2-bb21-4f3319a66514.json  0aa233a3-6a3f-4a1a-b672-65980be6d628.json  0cacc8f1-44fb-4af5-a3d6-db84cdc26006.json  0cf6f202-3faa-459e-b28a-7092bfa34963.json  0d5fd3bd-5932-4b41-b7b5-27a6eac1f3b3.json  0d61725a-8674-401d-9c0c-d529fbc3f768.json  (+279 more)
(+3 files in other folders)
